<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kisgeri24 Manager</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">BudaJam</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Want to join? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Log me in!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email to sent you password reset instructions.</string>
    <string name="climber_name_2">Climber name #2</string>
    <string name="climber_name_1">Climber name #1</string>
    <string name="team_name">Team name</string>
    <string name="btn_addclimb">We did some climbing!</string>
    <string name="btn_roka">Róka</string>
    <string name="btn_kecske">Kecske</string>
    <string name="btn_svab">Sváb</string>
    <string name="btn_francia">Francia</string>
    <string name="btn_options">Options</string>
    <string name="manageClimbs">We did some climbing. Let\'s document it!</string>
    <string name="check_out_our_climbs">Check Out Our Climbs</string>
    <string name="menu">Menu</string>
    <string name="subtitle">24 hours climbing competition</string>
    <string name="title">BudaJam</string>
    <string name="verified_string">Click Here If Verified!</string>
    <string name="whos_climbs">Who\'s climbs do you want to see?</string>
    <string name="list_climbs">Pick a place to see the list of climbs!</string>
    <string name="all_the_climbs">All the climbs!</string>
    <string name="back">Back</string>
    <string name="climbed_it">Climbed it!</string>
    <string name="lead">Lead</string>
    <string name="top_rope">Top-rope</string>
    <string name="contentDescRemoveButton">Remove climb trash icon</string>
    <string name="menu_button">Menu button</string>
    <string name="category">Category</string>
    <string name="place_of_climb">Place of climb:</string>
    <string name="dialog_climbed_message">Nice climb, added to the database!</string>
    <string name="dialog_climbed_title">Way to go!</string>
    <string name="dialog_climbed_neutral">Gotcha, thanks!</string>
    <string name="dialog_climbedmorepoints_message">Team had this route, but you earned more points!</string>
    <string name="dialog_climbedalready_message">Team had this climb with more points!</string>
    <string-array name="category">
        <item>6H</item>
        <item>12H</item>
        <item>24H</item>
    </string-array>
    <string-array name="places">
        <item>Select a Place</item>
    </string-array>
</resources>