<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:elevation="20dp">

        <ImageView
            android:id="@+id/menuButton"
            style="@style/menu_button"
            android:src="@drawable/avd_anim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/addClimb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:theme="@style/ThemeOverlay.MyTitle"
            android:text="@string/manageClimbs"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.MySubTitle"
            android:text="Place of climb:"
            android:gravity="center" />

        <LinearLayout
            android:id="@+id/climbButtons2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/svab"
                style="@style/button_style_main"
                android:drawableLeft="@mipmap/german"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textAlignment="viewStart"
                android:text="@string/btn_svab" />

            <Button
                android:id="@+id/francia"
                android:drawableLeft="@mipmap/french"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/button_style_main"
                android:textSize="12sp"
                android:textAlignment="viewStart"
                android:text="@string/btn_francia" />

            <Button
                android:id="@+id/roka"
                android:drawableLeft="@mipmap/fox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                style="@style/button_style_main"
                android:textSize="12sp"
                android:text="@string/btn_roka" />

            <Button
                android:id="@+id/kecske"
                android:drawableLeft="@mipmap/goat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                style="@style/button_style_main"
                android:textSize="12sp"
                android:text="@string/btn_kecske" />
        </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/scrollViewLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/climbScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                android:scrollbars="vertical">

                <LinearLayout
                    android:id="@+id/routeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/emptyScreenLinear"
                        android:orientation="vertical"
                        android:paddingTop="90dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:theme="@style/ThemeOverlay.MyTitle"
                            android:layout_gravity="center_horizontal"
                            android:id="@+id/titleOnEmpty"
                            android:text="@string/title" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:theme="@style/ThemeOverlay.MySubTitle"
                            android:layout_gravity="center_horizontal"
                            android:id="@+id/subTitleOnEmpty"
                            android:text="@string/subtitle" />

                        <ImageView
                            android:layout_width="@dimen/logo_w_h"
                            android:layout_height="@dimen/logo_w_h"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="30dp"
                            android:src="@mipmap/climbing_icon" />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>