<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/firstLinearLayout"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_gravity="right"
            android:text="Back"
            android:textColor="@color/accent">
        </Button>

        <LinearLayout
            android:id="@+id/spinnerDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:theme="@style/ThemeOverlay.MySubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/whos_climbs"
                android:textStyle="bold">
            </TextView>

           <!-- <Spinner
                style="@style/Widget.App.Spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/nameSpinner">
            </Spinner>-->
            <RadioGroup
                android:checkedButton="@+id/climber1onswitch"
                android:id="@+id/toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/control_switch_background_border"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginStart="3dp"
                    android:id="@+id/climber1onswitch"
                    android:background="@drawable/control_switch_background_selector"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center"
                    android:textColor="@drawable/control_switch_color_selector"/>
                <RadioButton
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginEnd="3dp"
                    android:id="@+id/climber2onswitch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/control_switch_background_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:textColor="@drawable/control_switch_color_selector" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/list_climbs"
                android:textColor="@color/accent"
                android:textSize="16sp"
                android:textStyle="bold">
            </TextView>
            <Button
                android:id="@+id/allClimbs"
                style="@style/button_style_alltheclimbs"
                android:drawablePadding="0dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:drawableLeft="@mipmap/allthings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_the_climbs" />
        <LinearLayout
            android:id="@+id/climbButtons1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/svab"
                style="@style/button_style_main"
                android:drawableLeft="@mipmap/german"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_svab" />

            <Button
                android:id="@+id/francia"
                android:drawableLeft="@mipmap/french"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/button_style_main"
                android:text="@string/btn_francia" />

            <Button
                android:id="@+id/roka"
                android:drawableLeft="@mipmap/fox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/button_style_main"
                android:text="@string/btn_roka" />

            <Button
                android:id="@+id/kecske"
                android:drawableLeft="@mipmap/goat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/button_style_main"
                android:text="@string/btn_kecske" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/accent"
            android:layout_margin="5dp"
            android:id="@+id/teamPointsView" />

        <ScrollView
            android:id="@+id/scrollViewRoutes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:fastScrollEnabled="false"
            android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:orientation="vertical"
            android:gravity="start">
        </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>